docs: Refactor documentation and add Installation and Contributing guides (#15)
This PR reorganizes and expands the project documentation to improve
developer onboarding and clarify the project's unique value proposition.

Key changes include:
- **README Refactor**: Updated with a clear "Why this fork?" section
highlighting modern Java ergonomics (Java 21+, JSpecify, Cleaner API)
and Zig-based cross-compilation.
- **New `INSTALL.md`**: Dedicated guide for integrating the library into
Gradle projects using `flatDir` and automated download tasks.
- **New `CONTRIBUTING.md`**: Clear instructions for developers on how to
use the code generation tasks to add new language parsers.
- **CI Enhancements**: Added a descriptive name to the GitHub Actions
workflow.

These changes move detailed implementation and setup steps out of the
main README into specialized files, making the repository easier to
navigate.

brokk-session-ids:019d2a31-4483-786e-a417-1ddecf209f88