@@ -1,39 +1,78 @@
 # Tree Sitter NG
 
-Next generation Tree Sitter Java binding. A fork from https://github.com/bonede/tree-sitter-ng.
+[![CI](https://github.com/BrokkAi/tree-sitter-ng/actions/workflows/main.yml/badge.svg)](https://github.com/BrokkAi/tree-sitter-ng/actions)
+[![Latest Release](https://img.shields.io/github/v/release/BrokkAi/tree-sitter-ng)](https://github.com/BrokkAi/tree-sitter-ng/releases)
 
-The artifacts are published under the group ID `ai.brokk`.
+Next generation Tree Sitter Java binding. A "Java-first" fork optimized for modern developer experience, safety, and
+ecosystem breadth.
 
-Start hacking!
+## Why this fork?
+
+* **Ecosystem Breadth**: Expanded support for the modern stack (Kotlin, Zig, Angular, Vue.js), supplementing the
+  official grammars maintained by the upstream project.
+* **Modern Java Ergonomics**: Moving away from C-style wrappers toward a library that feels native to Java 21+.
+    * **Strict Null Safety**: Integration with **JSpecify** and **Error Prone** for compile-time safety at the JNI
+      boundary.
+    * **Idiomatic Patterns**: Lazy collection patterns (e.g., `getNamedChildren()`) and strict handling (e.g.,
+      `parseStringOrThrow()`).
+    * **Advanced Query Support**: First-class support for Tree-sitter **predicates** and **directives** (e.g., `#eq?`, `#match?`, `#set!`) directly within the Java API.
+    * **Resource Management**: Automated native memory management using the **Cleaner API** with `AutoCloseable`
+      support.
+
+### Start hacking!
 
 ```java
-// imports are omitted
-class Main {
-    public static void main(String[] args) {
-        // Core classes implement AutoCloseable. They are also registered in the Cleaner
-        // for phantom-reachable cleanup, but explicit closing is recommended.
-        try (TSParser parser = new TSParser();
-             // Use `TSLanguage.load` instead if you would like to load parsers as shared object(.so, .dylib, or .dll).
-             // TSLanguage.load("path/to/languane/shared/object", "tree_sitter_some_lang");
-             TSLanguage json = new TreeSitterJson()) {
+try (TSParser parser = new TSParser();
+     TSLanguage json = new TreeSitterJson()) {
 
-            parser.setLanguage(json);
-            // Use parseStringOrThrow for strict null handling
-            try (TSTree tree = parser.parseStringOrThrow(null, "[1, null]")) {
-                TSNode rootNode = tree.getRootNode();
-                
-                // You can access children via index
-                TSNode arrayNode = rootNode.getNamedChild(0);
+    parser.setLanguage(json);
+    
+    // Use parseStringOrThrow for strict null handling
+    try (TSTree tree = parser.parseStringOrThrow(null, "[1, null]")) {
+        TSNode rootNode = tree.getRootNode();
+        
+        // Access children via index
+        TSNode arrayNode = rootNode.getNamedChild(0);
 
-                // Or use the new lazy list pattern for easier iteration
-                for (TSNode child : arrayNode.getNamedChildren()) {
-                    System.out.println(child.getType());
-                }
-            }
+        // Or use the new lazy list pattern for easier iteration
+        for (TSNode child : arrayNode.getNamedChildren()) {
+            System.out.println(child.getType());
         }
     }
 }
 ```
+
+## Supported Grammars
+
+We maintain both official and high-demand community grammars.
+
+| Language                    | Status        | Support Level                      |
+|:----------------------------|:--------------|:-----------------------------------|
+| Java, Python, C++, Go, etc. | **Official**  | Upstream grammars, bundled here    |
+| Kotlin, Zig                 | **Community** | Maintained & packaged in this fork |
+| Vue, Angular                | **Framework** | Extended support for web stack     |
+
+## Technical Design
+
+### JNI Safety & Memory Management
+
+We bridge the gap between Java's GC and C's manual memory management using a dual-layered approach:
+
+1. **AutoCloseable**: Primary resources (Parsers, Trees, Cursors) implement `AutoCloseable` for deterministic cleanup
+   via `try-with-resources`.
+2. **Cleaner API**: A `Cleaner` fallback ensures that if a Java object is garbage collected without being closed, the
+   underlying native memory is still freed, preventing leaks in long-running processes.
+
+### Type Safety
+
+By utilizing **JSpecify** annotations and **Error Prone** static analysis, we enforce null-safety across the JNI
+boundary. This ensures that the "C-heavy" nature of Tree-Sitter doesn't lead to `NullPointerException` or JVM crashes in
+your Java application.
+
+### Zig Cross-Compilation
+
+We use **Zig** as our C/C++ compiler toolchain. This allows us to produce perfectly matched native binaries for Linux,
+macOS, and Windows (x86_64 and aarch64) from a single CI environment without complex cross-compilation headers.
 
 # Commands
 
@@ -48,7 +87,8 @@ class Main {
 # Releases
 
 The project distinguishes between the **Java library version** (`libVersion`) and the **upstream grammar version** (
-`upstreamVersion`).
+`upstreamVersion`). We **are not** currently working on Maven Central publishing. For now, we provide a pre-bundled ZIP
+to ensure all native binaries are perfectly matched to the library version.
 
 ## Lockstep Versioning
 
@@ -92,135 +132,16 @@ tree-sitter C code is downloaded and compiled.
 - x86_64-linux
 - aarch64-linux
 
-# Integrating Tree-Sitter-NG into Gradle
+## Installation
 
-Because these libraries contain native components and are hosted as a bundled ZIP release on GitHub, the integration 
-requires a two-step process:
-1. **Automated Retrieval**: A Gradle task to download and extract the JARs.
-2. **Repository Configuration**: A `flatDir` repository that points to the extracted artifacts.
+Currently, we distribute perfectly matched native binaries via a pre-bundled ZIP to avoid Git history bloat. For full
+instructions on how to automate fetching and caching these dependencies via Gradle `flatDir`, please see
+our [Installation Guide](INSTALL.md).
 
-## 1. Define Versions in `libs.versions.toml`
+## Contributing
 
-First, add the coordinates to your Version Catalog. We use a custom namespace (`ai.brokk`) to avoid collisions with upstream libraries.
-
-```toml
-[versions]
-treesitter = "0.2.0"
-
-[libraries]
-# Core Runtime
-treesitter-api = { group = "ai.brokk", name = "tree-sitter", version.ref = "treesitter" }
-
-# Language Modules
-treesitter-java = { group = "ai.brokk", name = "tree-sitter-java", version.ref = "treesitter" }
-treesitter-python = { group = "ai.brokk", name = "tree-sitter-python", version.ref = "treesitter" }
-# Add other languages as needed...
-```
-
-## 2. Configure the Download Task
-
-In your **root** `build.gradle.kts`, create a task to handle the lifecycle of the native ZIP. This task is incremental, meaning it only runs when the version changes.
-
-```kotlin
-tasks.register("downloadTreeSitterNg") {
-    val version = libs.versions.treesitter.get()
-    val downloadUrl = "https://github.com/BrokkAi/tree-sitter-ng/releases/download/v$version/tree-sitter-ng-jar.zip"
-    val cacheDir = file(".gradle/tree-sitter-ng/v$version")
-    val zipFile = file(".gradle/tree-sitter-ng/tree-sitter-ng.zip")
-
-    inputs.property("version", version)
-    outputs.dir(cacheDir)
-
-    doLast {
-        if (!zipFile.exists()) {
-            zipFile.parentFile.mkdirs()
-            java.net.URI(downloadUrl).toURL().openStream().use { it.copyTo(zipFile.outputStream()) }
-        }
-
-        copy {
-            from(zipTree(zipFile))
-            into(cacheDir)
-            // Extract only the language directories
-            include("tree-sitter*/**") 
-            includeEmptyDirs = false
-        }
-    }
-}
-```
-
-## 3. Set Up the Local Repository
-
-In the `allprojects` or `subprojects` block of your root build script, configure Gradle to look into the extracted folders for dependencies.
-
-> **Note:** `flatDir` does not support recursive searching, so you must point it directly to the subdirectories containing the `.jar` files.
-
-```kotlin
-allprojects {
-    repositories {
-        val tsVersion = "0.2.0"
-        flatDir {
-            dirs(
-                rootProject.file(".gradle/tree-sitter-ng/v$tsVersion/tree-sitter"),
-                rootProject.file(".gradle/tree-sitter-ng/v$tsVersion/tree-sitter-java"),
-                rootProject.file(".gradle/tree-sitter-ng/v$tsVersion/tree-sitter-python")
-            )
-        }
-        mavenCentral()
-    }
-}
-```
-
-## 4. Usage in Subprojects
-
-In your application or library module (e.g., `app/build.gradle.kts`), declare the dependencies and ensure the download task runs before compilation.
-
-```kotlin
-dependencies {
-    implementation(libs.treesitter.api)
-    implementation(libs.treesitter.java)
-    implementation(libs.treesitter.python)
-}
-
-// Ensure JARs are extracted before the IDE or compiler tries to find them
-tasks.withType<JavaCompile> {
-    dependsOn(":downloadTreeSitterNg")
-}
-```
-
-## Important Considerations
-
-### Why Use `flatDir`?
-Since these JARs are extracted from a ZIP and do not include Maven `pom.xml` metadata, `flatDir` is the simplest way to 
-treat a local directory as a repository. It matches the filename (e.g., `tree-sitter-java.jar`) to the dependency name.
-
-### Native Access
-When running your application with these libraries, remember that Tree-sitter uses JNI (Java Native Interface). If you 
-are using JDK 21+, you may need to pass the following JVM argument to allow native access: `--enable-native-access=ALL-UNNAMED`
-
-### Cleaning
-The artifacts are stored in the `.gradle` folder. Running `./gradlew clean` typically does not remove this folder. If you need to force a re-download, delete the `.gradle/tree-sitter-ng` directory manually.
-
-# Developers: How to Add a Parser
-
-To add a new language parser to this project, we provide a code generation task that handles most of the boilerplate.
-This is also how you can add an "unofficial" or community parser.
-
-1. **Generate the subproject:**
-   Run the `gen` task, providing the language name (in this example, Kotlin), its version, and the URL to its source
-   code zip file.
-   ```bash
-   ./gradlew gen --parser-name=kotlin --parser-version=0.3.8 --parser-zip=https://github.com/fwcd/tree-sitter-kotlin/archive/refs/tags/0.3.8.zip
-   ```
-   This will create a new directory `tree-sitter-kotlin` with the correct `build.gradle`, `gradle.properties`, JNI
-   bindings, and Java class extending `TSLanguage`. Finally, an entry of `include 'tree-sitter-kotlin'` will be inserted
-   into `settings.gradle`.
-
-2. **Build native modules and test:**
-   Our build system automatically uses Zig to cross-compile the native shared libraries for the new parser as part of
-   the compilation process. You can trigger the download, native compilation, and tests just by running the tests:
-   ```bash
-   ./gradlew :tree-sitter-kotlin:test
-   ```
+Want to add a new community grammar? Check out our [Guide to Adding Parsers](CONTRIBUTING.md) to see how our
+code-generation task handles the boilerplate.
 
 # Built-in Parsers
 
@@ -298,7 +219,7 @@ class Main {
 
                 // Traverse the AST tree with DOM-like APIs
                 TSNode rootNode = tree.getRootNode();
-                
+
                 // Access children as a standard Java List
                 List<TSNode> children = rootNode.getChildren();
                 TSNode arrayNode = rootNode.getNamedChild(0);
